<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/noteBook"
        app:showAsAction="never" />

    <item
        android:id="@+id/checkbox"
        android:orderInCategory="100"
        android:title="@string/checkboxes"
        app:showAsAction="never" />

    <item
        android:id="@+id/spinner"
        android:orderInCategory="100"
        android:title="@string/spinner"
        app:showAsAction="never" />

    <item
        android:id="@+id/forms"
        android:orderInCategory="100"
        android:title="@string/forms"
        app:showAsAction="never" />

    <item
        android:id="@+id/health"
        android:orderInCategory="100"
        android:title="@string/health"
        app:showAsAction="never" />
</menu>